--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 # This is a basic workflow to help you get started with Actions
 name: CI
 # Controls when the workflow will run
-on: workflow_dispatch
+on: 
+  workflow_dispatch
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
