--- a/.github/workflows/testit.yml
+++ b/.github/workflows/testit.yml
@@ -1,11 +1,11 @@
 name: GAT
-on: workflow_dispatch:
+on: workflow_dispatch
 jobs:
 
   build:
 
     runs-on: 
-      ubuntu-latest:
+      ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
