--- a/.github/workflows/cron-jobz.yml
+++ b/.github/workflows/cron-jobz.yml
@@ -1,9 +1,15 @@
-name: CI-Test
-on: [push, workflow_dispatch]
+name: Cron-Action 
+
+on:
+  schedule:
+    # Runs "Every 5 minutes to test" 
+    - cron: '*/5 * * * *'
+
 jobs:
   build:
-    runs-on: hammer
-    steps:
+    name: Hit Me
+    runs-on: forge
+    steps:      
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
