--- a/.github/workflows/Python-Linter.yml
+++ b/.github/workflows/Python-Linter.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   run-linters:
     name: Run linters
-    runs-on: ubuntu-latest
+    runs-on: smithy
 
     steps:
       - name: Check out Git repository
